--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <div class="content-1  resflex">
             <div id="content1-row1">
-                <img src="img/sayapurp.jpg" class="img1" alt="foto saya">
+                <img src="img/saya.jpg" class="img1" alt="foto saya">
             </div>
             <div class="flexcent" id="content-1-row2">
             <div class="width100">
